ultimas alteracoes criei a classe produto e seus beans

--- a/lojavirtual/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/lojavirtual/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -19,7 +19,7 @@
 			<p:submenu label="Cadastros">
 			
 			<p:menuitem value="Cliente" outcome="/cliente/ClientesCadastrados" />
-			
+			<p:menuitem value="Produto" outcome="/produto/ProdutosCadastrados" />
 			</p:submenu>
 			</p:submenu>
 			
