--- a/lojavirtual/src/main/webapp/WEB-INF/templates/Layout.xhtml
+++ b/lojavirtual/src/main/webapp/WEB-INF/templates/Layout.xhtml
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
 	<f:facet name="first">
@@ -22,10 +23,23 @@
 
 <h:body>
 
-	<header class="aw-topbar">
-		
-		
+	<header class="aw-topbar">	
 		<a href="#" class="aw-toggle  js-toggle"><i class="fa  fa-bars"></i></a>
+		<h:form>  
+    <p:menubar>
+        <p:submenu label="Clientes" icon="ui-icon-document">
+            <p:menuitem value="Novo" outcome="/cliente/CadastroCliente"/>
+            <p:separator />
+            <p:menuitem value="Consultar" outcome="/cliente/ClientesCadastrados" />
+        </p:submenu>
+       
+        <f:facet name="options">
+            <h:outputLabel for="name" value="nome do usuario"/>
+            
+            <p:commandButton type="button" value="Sair" icon="ui-icon-extlink" />
+        </f:facet>
+    </p:menubar>
+</h:form>
 	</header>
 	
 	<aside class="aw-sidebar  js-sidebar">
