--- a/lojavirtual/src/main/webapp/resources/algaworks/styles/estilo.css
+++ b/lojavirtual/src/main/webapp/resources/algaworks/styles/estilo.css
@@ -1,7 +1,15 @@
 #login-dialog {
-	width: 200px;
-	margin: auto;
-	margin-top: 150px;
+	background: #1e94d2;
+			height: 100%;
+  			min-height: 100%;
+  			display: -webkit-flex;
+  			display: flex;
+  			-webkit-align-items: center;
+  			align-items: center;
+  			-webkit-justify-content: center;
+  			justify-content: center;
+  			padding: 40px;
+  border: 1px solid rgba(0, 0, 0, .3)"
 }
 
 .grid-login {
