--- a/lojavirtual/src/main/webapp/WEB-INF/templates/Layout.xhtml
+++ b/lojavirtual/src/main/webapp/WEB-INF/templates/Layout.xhtml
@@ -39,9 +39,9 @@
         </p:submenu>
        
         <f:facet name="options">
-            <h:outputLabel for="name" value="nome do usuario"/>
+            <h:outputLabel for="name" value="#{logincontroler.usuario.email}"/>
             
-            <p:commandButton type="button" value="Sair" icon="ui-icon-extlink" />
+            <p:commandButton value="Sair" action="#{logincontroler.deslogar}" icon="ui-icon-extlink" />
         </f:facet>
     </p:menubar>
     
