--- a/lojavirtual/src/main/webapp/WEB-INF/templates/Layoutlogin.xhtml
+++ b/lojavirtual/src/main/webapp/WEB-INF/templates/Layoutlogin.xhtml
@@ -11,12 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 	</f:facet>
          
-	<title>Wavii</title>
+	<title>Comercio online</title>
 
-	<h:outputStylesheet library="algaworks" name="styles/custom.css" />
-	<h:outputStylesheet library="algaworks" name="styles/layout.css" />
-	<h:outputStylesheet library="algaworks" name="styles/components.css" />
-	<h:outputStylesheet library="algaworks" name="styles/estilo.css" />
+	<h:outputStylesheet library="algaworks" name="styles/login.css" />
 	<h:outputScript target="body" library="primefaces" name="jquery/jquery.js" />
 	<h:outputScript target="body" library="algaworks" name="javascripts/app.js" />
 </h:head>
