--- a/lojavirtual/src/main/webapp/WEB-INF/templates/Layout.xhtml
+++ b/lojavirtual/src/main/webapp/WEB-INF/templates/Layout.xhtml
@@ -22,7 +22,6 @@
 </h:head>
 
 <h:body>
-
 	<header class="aw-topbar">	
 		<a href="#" class="aw-toggle  js-toggle"><i class="fa  fa-bars"></i></a>
 		<h:form>  
@@ -41,7 +40,7 @@
         <f:facet name="options">
             <h:outputLabel for="name" value="#{logincontroler.usuario.email}"/>
             
-            <p:commandButton value="Sair" action="#{logincontroler.deslogar}" icon="ui-icon-extlink" />
+            <p:commandButton value="Sair" action="#{ogincontroler.deslogar}" icon="ui-icon-extlink" />
         </f:facet>
     </p:menubar>
     
@@ -84,5 +83,4 @@
     };
 </script>
 </h:body>
-
 </html>
