--- a/lojavirtual/src/main/webapp/resources/algaworks/styles/estilo.css
+++ b/lojavirtual/src/main/webapp/resources/algaworks/styles/estilo.css
@@ -31,3 +31,8 @@
 	box-shadow:0px 0px 5px #a6a6a6; 
 	
 }
+.menu-sistema {
+    border: 0px !important;
+    padding: 0px !important;
+    background: none !important;
+}
