--- a/lojavirtual/src/main/webapp/resources/algaworks/styles/login.css
+++ b/lojavirtual/src/main/webapp/resources/algaworks/styles/login.css
@@ -148,7 +148,7 @@ hr{
     background-color: rgb(104, 145, 162);
     /* background-color: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));*/
     padding: 0px;
-    font-weight: 700;
+    font-weight: 700px;
     font-size: 14px;
     height: 36px;
     -moz-border-radius: 3px;
