--- a/lojavirtual/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/lojavirtual/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -17,6 +17,7 @@
 			<p:submenu label="Cadastro">
 			<p:menuitem value="Cliente"   outcome="/cliente/CadastroCliente" />
 			<p:menuitem value="Produto"   outcome="/produto/CadastroProduto" />
+			<p:menuitem value="Usuario"   outcome="/usuario/CadastroUsuario" />
 			</p:submenu>
 			
 			<p:menuitem   value="Sair" action="#{logincontroler.desLogar}"/>
